--- a/TEACH_OR_LEARN/TEACH_OR_LEARN.csproj
+++ b/TEACH_OR_LEARN/TEACH_OR_LEARN.csproj
@@ -111,6 +111,7 @@
     <Content Include="User_kurse_past.aspx" />
     <Content Include="Kurse_work_page.aspx" />
     <Content Include="Que_user_page.aspx" />
+    <Content Include="Remove_user_kurse_page.aspx" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -243,6 +244,13 @@
     </Compile>
     <Compile Include="Que_user_page.aspx.designer.cs">
       <DependentUpon>Que_user_page.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Remove_user_kurse_page.aspx.cs">
+      <DependentUpon>Remove_user_kurse_page.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Remove_user_kurse_page.aspx.designer.cs">
+      <DependentUpon>Remove_user_kurse_page.aspx</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
